--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,24 @@
 /* global styles */
 
+
+
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #444444;
+}
 .appWrapper {
     background-color: #f099a8;
     background-image: linear-gradient(315deg, #f099a8 0%, #f7dce1 74%);
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
+}
+
+@media screen and (max-width: 1000px) {
+    .appWrapper {
+        max-width: 100vw;
+    }
 }
 
 
@@ -20,14 +35,24 @@
 .main {
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
+    place-items: center;
+    margin: 0 50px;
 }
 
+@media screen and (max-width: 700px) {
+    .main {
+        grid-template-columns: 1fr;
+
+    }
+}
 
 .gameCard {
     border: 1px solid black;
     height: 300px;
+    width: 100%;
     margin: 20px;
     background-color: white;
+    border-radius: 10px;
 }
 
 .gameCard h3 {
@@ -36,6 +61,12 @@
 
 .gameCard p{
     text-align: center;
+}
+
+@media screen and (max-width: 700px) {
+    .gameCard {
+
+    }
 }
 
 .yourChoice, .computerChoice {
@@ -47,14 +78,29 @@
     justify-content: center;
 }
 
-.activeIcon {
+.playerIcons:hover {
     background-color: #EFEFEF;
     border-radius: 90px;
 }
 
-.gameMessage {
+.activeIcon {
+    background-color: rgb(224, 224, 224);
+    border-radius: 90px;
+}
+
+.computerIcon {
+    width: 90px;
+}
+
+
+
+.gameMessageWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.gameMessage {
+    text-align:center;
 }
