--- a/src/index.css
+++ b/src/index.css
@@ -11,15 +11,12 @@ body {
 .appWrapper {
     background-color: #f099a8;
     background-image: linear-gradient(315deg, #f099a8 0%, #f7dce1 74%);
+    display: grid;
+    place-items: center;
     height: 100%;
     min-height: 100vh;
 }
 
-@media screen and (max-width: 1000px) {
-    .appWrapper {
-        max-width: 100vw;
-    }
-}
 
 
 /* Header component styles */
@@ -37,20 +34,18 @@ body {
     grid-template-columns: 3fr 1fr 3fr;
     place-items: center;
     margin: 0 50px;
+
+    max-width: 1200px;
 }
 
-@media screen and (max-width: 700px) {
-    .main {
-        grid-template-columns: 1fr;
-
-    }
-}
 
 .gameCard {
     border: 1px solid black;
     height: 300px;
     width: 100%;
+    max-width: 400px;
     margin: 20px;
+    padding: 10px;
     background-color: white;
     border-radius: 10px;
 }
@@ -63,11 +58,6 @@ body {
     text-align: center;
 }
 
-@media screen and (max-width: 700px) {
-    .gameCard {
-
-    }
-}
 
 .yourChoice, .computerChoice {
     text-transform: capitalize;
@@ -103,4 +93,63 @@ body {
 
 .gameMessage {
     text-align:center;
+    padding: 0 10px;
+}
+
+.resetButton {
+    margin: 10px;
+}
+
+/* responsive styles */
+
+@media screen and (max-width: 1000px) {
+    .appWrapper {
+        max-width: 100vw;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .main {
+        grid-template-columns: 1fr;
+
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .header {
+        height: 100px;
+    }
+    .gameCard {
+        height: 200px;
+    }
+    .main {
+        margin-bottom: 20px;
+    }
+    .icons img {
+        width: 50px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .heading {
+        font-size: 22px;
+    }
+
+    .gameCard {
+        height: 180px;
+        width: 250px;
+        padding: 0;
+        margin: auto;
+    }
+
+    .icons img {
+        width: 50px;
+    }
 }
